Update Icon, add new fetures, faster execution.
Update the Icon, make color closer to FANZA red and change the font to smaller.
Recentered the "X" button
Changed some logic in popup.js, making the switching between accounts faster.
Added features: Right-click menu for Rename, Clear Note, and Show Account
Improved Original Scroll bar: Made the scroll bar minimum and slim
Improved text overflow: long accounts/note now will get hidden instead of conflicting with the "switch button"
Now using google's chrome.storage instead of local storage for better security
Added content_security_policy in manifest
Now correctly refreshes the chrome tab with the DMM/FANZE game correctly
Now correctly jump back to the game's tab after successfully finishing switching account
Now the new tabs for login are not focused and operate on background

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
   "name": "Fanza Account Switcher",
-  "version": "1.0",
+  "version": "1.02",
   "description": "Switch between Fanza accounts easily.",
   "permissions": ["storage", "tabs", "scripting"],
   "host_permissions": [
     "https://accounts.dmm.co.jp/*",
-    "https://games.dmm.co.jp/*"
+    "https://games.dmm.co.jp/*",
+    "https://www.dmm.co.jp/top/"
   ],
   "background": {
     "service_worker": "background.js"
@@ -22,5 +23,8 @@
     "16": "icon16.png",
     "32": "icon32.png",
     "192": "icon192.png"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 }
